--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 
         </head>
         <body>
-            <h1 style="color:blue;"> Welcomee to my website!!</h1>
+            <h1 style="color:red;"> Welcomee to my website!!</h1>
             <h2> Hey ok </h2>
             
             Hello World! 
