--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,19 @@
             <title>HEllo!
 
             </title>
+            <style>
+                h1{
+                    color:bisque;
+                
+                }
+                h2{
+                    color:blueviolet;
+                }
+            </style>
 
         </head>
         <body>
-            <h1 style="color:red;"> Welcomee to my site!!</h1>
+            <h1 > Welcomee to my site!.....!</h1>
             <h2> Hey ok </h2>
             
             Hello World! 
